--- a/style.css
+++ b/style.css
@@ -3,5 +3,9 @@ html, body {
   padding: 0;
 }
 canvas {
-  display: block;
+  margin: auto;
+   top: 0;
+   left: 0;
+   position: absolute;
+   z-index:-1;
 }
